--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <td>  <h1>V.Rajagopalan</h1>
       <p><em>Third Year Computer Engineering student at <strong>IIITDM Kancheepuram</strong></em></p>
       <p>Pursuing <em>B.tech (Hons)</em> with a CGPA of <strong>9.25</strong></p>
-      <p>Intersted in Data Structures and algortihm ,Image processing and Machine Learning .</p></td>
+      <p>Intersted in Data Structures and algorithm ,Image processing and Machine Learning .</p></td>
   </tr>
 </table>
 
